# T-Agent

./: .env.example  .gitignore  AGENTS.md  AI_Web测试_业界调研.md  AI_Web自动化测试_业界调研_2025-2026.md  CLAUDE.md  README.md  TODO.md  alembic.ini  browser-use_对比评估.md  package-lock.json  package.json  presentation_editable-1780906961494.pptx  pyproject.toml  requirements.txt  skills-lock.json  产品设计文档_v2.0.html  产品设计文档_v2.0.md  实现规格说明书.md  平台化开发路径.md  平台化设计草案.md
api/: auth.py  execution_worker.py  repository.py  run_executor.py  server.py
cli/: run_case.py
codegen/: base.py  bdd.py  locators.py
docs/: T-Agent进展汇报.html  midscene调研总结.md  midscene集成方案.md  test_spec_v2.md  tmj.md  内网用例对接规格.md  完整执行流说明.md  实施记录.md  汇报_AI辅助测试执行平台.md  进展汇报文字素材.md
eval_fg/: ab_grounding.py  capture.py  capture_more.py  judge_eval.py
examples/: _tp08_queue_smoke.py  acceptance_stage2.py  automation_exercise_cases.xlsx  automation_exercise_vocab.json  custom_tools.yaml  make_automation_exercise_xlsx.py  make_thingsboard_xlsx.py  sample_cases.xlsx  saucedemo_cases.xlsx  saucedemo_checkout.xlsx  saucedemo_checkout_wait.xlsx  saucedemo_session.xlsx  saucedemo_vocab.json  the_internet_login.xlsx
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
harness/: agent.py  assertion.py  context.py  healing.py  hook_builder.py  hooks.py  llm.py  midscene_agent.py  orchestrator.py  page_probe.py  permission.py  precondition.py  prompt.py  react_loop.py  recorder.py  session.py  skills.py  step_plan.py  tools.py  visual_executor.py
input/: excel_parser.py  models.py
migrations/: env.py  (+1 more)
(+122 files in other folders)
